--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/background" />
 
     <com.wiser.lrc.LrcView
         android:id="@+id/lrc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#AA000000"
-        app:lrcColor="@color/colorPrimary"
+        app:lrcColor="#ffffff"
         app:lrcEmptyLrcText="加载失败，歌词未显示"
+        app:lrcIsDashLine="true"
+        app:lrcLeftLineSrc="@drawable/line"
         app:lrcLimitLines="11"
+        app:lrcLineCenterColor="#CAFF70"
+        app:lrcLineEndColor="#00ff00"
+        app:lrcLineStartColor="#ff0000"
         app:lrcMode="KARAOKE"
-        app:lrcPlayColor="@color/colorAccent"
+        app:lrcPlayColor="#ffff00"
         app:lrcPlaySrc="@mipmap/lrc_play"
-        app:lrcTextSize="20sp"
-        app:lrcTimeLineColor="#ffff00"
-        app:lrcTimeTextColor="#00ffff"
-        app:lrcTimeTextSize="12sp" />
-</LinearLayout>
+        app:lrcTextSize="18sp"
+        app:lrcTimeDirectionMode="LEFT"
+        app:lrcTimeLineColor="#CAFF70"
+        app:lrcTimeLineHeight="1dp"
+        app:lrcTimeLineLength="100dp"
+        app:lrcTimeLinePadding="15dp"
+        app:lrcTimeTextColor="#ffff00"
+        app:lrcTimeTextSize="15sp"
+        app:lrcTranslateColor="#CCCCCC"
+        app:lrcTranslateIsDrawColor="false" />
+
+</FrameLayout>
