音乐播放歌词控件LrcView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         app:lrcPlayColor="#ffff00"
         app:lrcPlaySrc="@mipmap/lrc_play"
         app:lrcTextSize="18sp"
-        app:lrcTimeDirectionMode="LEFT"
+        app:lrcTimeDirectionMode="RIGHT"
         app:lrcTimeLineColor="#CAFF70"
         app:lrcTimeLineHeight="1dp"
         app:lrcTimeLineLength="100dp"
@@ -35,6 +35,6 @@
         app:lrcTimeTextColor="#ffff00"
         app:lrcTimeTextSize="15sp"
         app:lrcTranslateColor="#CCCCCC"
-        app:lrcTranslateIsDrawColor="false" />
+        app:lrcTranslateIsDrawColor="true" />
 
 </FrameLayout>
