音乐播放歌词控件LrcView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,14 +26,14 @@
         app:lrcMode="KARAOKE"
         app:lrcPlayColor="#ffff00"
         app:lrcPlaySrc="@mipmap/lrc_play"
-        app:lrcTextSize="18sp"
-        app:lrcTimeDirectionMode="RIGHT"
+        app:lrcTextSize="15sp"
+        app:lrcTimeDirectionMode="LEFT"
         app:lrcTimeLineColor="#CAFF70"
         app:lrcTimeLineHeight="1dp"
-        app:lrcTimeLineLength="100dp"
-        app:lrcTimeLinePadding="15dp"
+        app:lrcTimeLineLength="40dp"
+        app:lrcTimeLinePadding="10dp"
         app:lrcTimeTextColor="#ffff00"
-        app:lrcTimeTextSize="15sp"
+        app:lrcTimeTextSize="12sp"
         app:lrcTranslateColor="#CCCCCC"
         app:lrcTranslateIsDrawColor="true" />
 
