音乐播放歌词控件LrcView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         app:lrcTimeTextColor="#ffff00"
         app:lrcTimeTextSize="12sp"
         app:lrcTranslateColor="#CCCCCC"
-        app:lrcTranslateIsDrawColor="true" />
+        app:lrcTranslateIsDrawColor="true"
+        app:lrcHeightLightItems="1"/>
 
 </FrameLayout>
