--- a/lrc/src/main/res/values/attrs.xml
+++ b/lrc/src/main/res/values/attrs.xml
@@ -30,5 +30,6 @@
         <attr name="lrcRightLineSrc" format="reference" />
         <attr name="lrcTranslateIsDrawColor" format="boolean" />
         <attr name="lrcTranslateColor" format="color|reference" />
+        <attr name="lrcHeightLightItems" format="integer" />
     </declare-styleable>
 </resources>
